# armada-company-v2

./: .env.example  CLAUDE.md  Dockerfile  PRD.md  pyproject.toml  railway.toml
.github/scripts/: execute_issues.py
.github/workflows/: issue-executor.yml
alembic/: env.py
armada/api/: game.py  main.py
armada/domain/: ai.py  battle_loop.py  enums.py  factories.py  models.py  modules.py  movement.py
docs/: admirals.md  api.md  architecture.md  battlefield.md  combat-rules.md  domain-model.md  fleet-and-ships.md  modules-and-effects.md  mvp-plan.md  open-questions.md  progression.md  railway-setup.md  ui-interface.md
static/: game.js  index.html
